<resources>
    <string name="app_name">PropertyPro</string>
    <string name="sign_in_with_phone">Sign in with phone</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in">Sign in</string>
    <string name="signText">Sign in email</string>
    <string name="Email_hint">Email</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="id_number_place">Your ID Number</string>
    <string name="Full_Name">Your Full Name</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="profile_picture">profile_picture</string>
    <string name="my_listings">My Listings</string>
    <string name="Profile">Profile</string>
    <string name="settings_section">Settings</string>
    <string name="log_out">Logout</string>
    <string name="home_one">Home</string>

</resources>