<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/category_layout"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".SellerRegistration">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumberInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:textColorHint="@color/white"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:layout_marginTop="100dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idNumberInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/white"
        android:hint="@string/id_number_place"
        app:boxStrokeColor="@color/colorAccent"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textStyle="bold"
            android:contentDescription="idNumber" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:hint="@string/Full_Name"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:contentDescription="enterYourName"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:textColorHint="@color/white"
        android:hint="@string/email"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:textColorHint="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="8dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintEnabled="true"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintEnabled="true"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:hint="@string/confirm_password"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />



    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="Register" />

    <TextView
        android:id="@+id/loginLinkTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18dp"
        android:text="Already have an account?"
        android:textColor="@color/white"
        android:clickable="true"
        android:layout_gravity="center_horizontal"
        android:onClick="navigateToSignIn"
        android:textStyle="bold"/>
</LinearLayout>
