<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/sign_up"
    android:layout_marginTop="140dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">



    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardElevation="8dp"
        app:strokeColor="@color/black"
        app:strokeWidth="0.5dp"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Let's Create an account"
                android:textStyle="italic"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"/>
            
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullNameTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/baseline_name_outline_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:hint="@string/full_name"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:startIconDrawable="@drawable/email_ic">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:startIconDrawable="@drawable/pass_icon"
                app:passwordToggleEnabled="true"
                app:endIconDrawable="@drawable/hide_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingHorizontal="8dp"
                    android:maxLength="16"
                    android:paddingVertical="12dp"
                    android:layout_marginTop="12dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cPasswordTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:counterEnabled="true"
                app:startIconDrawable="@drawable/pass_icon"
                app:counterMaxLength="16">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:hint="@string/confirm_password"
                    android:maxLength="16"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/sign_up"
                style="@style/Widget.MaterialComponents.Button"/>



        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>



</LinearLayout>